# ros_ws_ex2

install/: local_setup.sh  setup.sh
install/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
install/armor_detector/lib/armor_detector/: armor_detector_node
install/armor_detector/share/armor_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/hik_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/rm_auto_aim/share/rm_auto_aim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/rm_serial_driver/include/rm_serial_driver/: crc.hpp  (+2 more)
log/: latest_build
src/daheng4ros/: CMakeLists.txt  package.xml
src/daheng4ros/src/: image_publisher.cpp
src/daheng_simple_driver/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
(+276 files in other folders)
